@@ -5,7 +5,7 @@
     "maxhealth" : "20",
     "strength" : "10",
     "levelRequirement" : "2",
-    "rewards" : [
+    "rewardsMethods" : [
         {
             "method" : "increaseExperience",
             "class" : "com.seanjohnson.textfighter.Player",
@@ -16,7 +16,7 @@
             "rewarditem" : "7 experience"
         },
         {
-            "method" : "gaincoins",
+            "method" : "gainCoins",
             "class" : "com.seanjohnson.textfighter.Player",
             "arguments" : ["7"],
             "argumentTypes" : ["1"],
@@ -31,7 +31,7 @@
                 {
                     "method" : "attack",
                     "class" : "com.seanjohnson.textfighter.enemy.Enemy",
-                    "arguments" : ["20","The pidgeon uses its super beak thrust attack which deals 20 damage."],
+                    "arguments" : ["20","The pigeon uses its super beak thrust attack which deals 20 damage."],
                     "argumentTypes" : ["1","0"],
                     "field" : "currentEnemy",
                     "fieldclass" : "com.seanjohnson.textfighter.TextFighter"
